2008-11-06  Kristian Amlie  <kristian.amlie@nokia.com>

        Reviewed by Simon Hausmann.

        Added COMPILER(RVCT) to detect the ARM RVCT compiler used in the Symbian environment.

        * wtf/Platform.h:

2008-11-06  Simon Hausmann  <hausmann@webkit.org>

        Fix the Qt build, adjust include paths after move of jsc.pro.

        * jsc.pro:

2008-11-06  Cameron Zwarich  <zwarich@apple.com>

        Rubber-stamped by Sam Weinig.

        Move kjs/Shell.cpp to the top level of the JavaScriptCore directory and
        rename it to jsc.cpp to reflect the name of the binary compiled from it.

        * GNUmakefile.am:
        * JavaScriptCore.vcproj/jsc/jsc.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * jsc.cpp: Copied from kjs/Shell.cpp.
        * jsc.pro:
        * jscore.bkl:
        * kjs/Shell.cpp: Removed.

2008-11-06  Cameron Zwarich  <zwarich@apple.com>

        Rubber-stamped by Sam Weinig.

        Move create_hash_table and jsc.pro out of the kjs directory and into the
        root directory of JavaScriptCore.

        * DerivedSources.make:
        * JavaScriptCore.pri:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * create_hash_table: Copied from kjs/create_hash_table.
        * jsc.pro: Copied from kjs/jsc.pro.
        * kjs/create_hash_table: Removed.
        * kjs/jsc.pro: Removed.
        * make-generated-sources.sh:

2008-11-05  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Maciej Stachowiak.

        https://bugs.webkit.org/show_bug.cgi?id=22094

        Fix for bug where the callee incorrectly recieves the caller's lexical
        global object as this, rather than its own.  Implementation closely
        follows the spec, passing jsNull, checking in the callee and replacing
        with the global object where necessary.

        * VM/CTI.cpp:
        (JSC::CTI::compileOpCall):
        * VM/Machine.cpp: